@@ -636,6 +636,15 @@ Details    : After ELC code landed, it is now improper to enqueue any mds
 	     locks under och_sem, because enqueue might want to decide to
 	     cancel open locks for same inode we are holding och_sem for.
 
+Severity   : normal
+Bugzilla   : 13843
+Description: Client eviction while running blogbench
+Details    : A lot of unlink operations with concurrent I/O can lead to a
+	     deadlock causing evictions. To address the problem, the number of
+	     oustanding OST_DESTROY requests is now throttled to
+	     max_rpcs_in_flight per OSC and LDLM_FL_DISCARD_DATA blocking
+	     callbacks are processed in priority.
+
 --------------------------------------------------------------------------------
 
 2007-08-10         Cluster File Systems, Inc. <info@clusterfs.com>
